--- a/aero.html
+++ b/aero.html
@@ -66,127 +66,85 @@
       </a>
     </div>
     <div class="course-main-content">
-      <img src="img/aero.jpg" alt="ui/ux" />
+      <img src="img/aero.jpg" alt="Aerospace Engineering" />
       <div class="course-main-text">
-        <h1>Aerospace</h1>
-        <p></p>
+        <h1>Aerospace Engineering</h1>
+        <p>
+          Embark on a journey through the skies and beyond with our Aerospace
+          Engineering program.
+        </p>
+        <!-- Uncomment the following line if you have a registration link -->
         <!-- <a href="register.html">Apply</a> -->
       </div>
       <div class="dropdown-box">
         <h2>Course Program</h2>
         <div class="drowBox">
           <div class="opener">
-            <h1>What is UX and UI design?</h1>
+            <h1>Introduction to Aerospace Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>What is User Experience?</li>
-              <li>What is User Interface?</li>
-              <li>Why is UX Design so Important?</li>
-              <li>Usability - Part of UX</li>
+              <li>Overview of Aerospace Engineering</li>
+              <li>History and Evolution</li>
+              <li>Key Disciplines</li>
+              <li>Applications in Aviation and Space Exploration</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>UX design</h1>
+            <h1>Aerodynamics and Flight Mechanics</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Human-Centered Design</li>
-              <li>
-                Why We Have Evolved From User-Centered Design to People, Human
-                and Humanity Centered Design?
-              </li>
-              <li>
-                How to Focus on People When You Solve Complex Global Challenges?
-              </li>
-              <li>The UX Design Process:</li>
-              <li>Discussion Exercise</li>
-              <li>Choose Theme</li>
+              <li>Principles of Aerodynamics</li>
+              <li>Flight Mechanics</li>
+              <li>Aircraft Design Considerations</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>Grides Wireframe</h1>
+            <h1>Propulsion Systems</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Grid System</li>
-              <li>Wireframes</li>
-              <li>Discussion exercise</li>
+              <li>Jet Engines and Rocket Propulsion</li>
+              <li>Thrust and Power</li>
+              <li>Advanced Propulsion Technologies</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>Figma introduction</h1>
+            <h1>Aerospace Materials and Structures</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Figma introduction</li>
-              <li>Creating website in figma</li>
+              <li>Materials Used in Aerospace</li>
+              <li>Structural Analysis and Design</li>
+              <li>Composite Materials</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>UX part review</h1>
+            <h1>Space Exploration</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-              <li>LinkedIn</li>
+              <li>Satellite Technology</li>
+              <li>Interplanetary Travel</li>
+              <li>Current and Future Space Missions</li>
             </ul>
           </div>
         </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Design</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>UI Patterns</li>
-              <li>Structure of a page</li>
-              <li>Organizing content</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Elements</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Typography</li>
-              <li>Text styles in Figma</li>
-              <li>Colors</li>
-              <li>Icons</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI part review</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-            </ul>
-          </div>
-        </div>
+        <!-- Add more sections as needed -->
       </div>
     </div>
 
