--- a/archie.html
+++ b/archie.html
@@ -66,130 +66,85 @@
       </a>
     </div>
     <div class="course-main-content">
-      <img src="img/archie.jpg" alt="ui/ux" />
+      <img src="img/archie.jpg" alt="Architecture">
       <div class="course-main-text">
-        <h1>Architecture</h1>
-        <p></p>
-        <!-- <a href="register.html">Apply</a> -->
+          <h1>Architecture</h1>
+          <p>Explore the world of architecture and discover the principles that shape the design of structures and spaces.</p>
+          <!-- Uncomment the following line if you have a registration link -->
+          <!-- <a href="register.html">Apply</a> -->
       </div>
       <div class="dropdown-box">
-        <h2>Course Program</h2>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>What is UX and UI design?</h1>
-            <i class="fas fa-plus-circle"></i>
+          <h2>Course Program</h2>
+          <div class="drowBox">
+              <div class="opener">
+                  <h1>Introduction to Architecture</h1>
+                  <i class="fas fa-plus-circle"></i>
+              </div>
+              <div class="content">
+                  <ul>
+                      <li>Overview of Architecture</li>
+                      <li>Historical Development</li>
+                      <li>Architectural Styles</li>
+                      <li>Importance in Modern Society</li>
+                  </ul>
+              </div>
           </div>
-          <div class="content">
-            <ul>
-              <li>What is User Experience?</li>
-              <li>What is User Interface?</li>
-              <li>Why is UX Design so Important?</li>
-              <li>Usability - Part of UX</li>
-            </ul>
+          <div class="drowBox">
+              <div class="opener">
+                  <h1>Architectural Design Principles</h1>
+                  <i class="fas fa-plus-circle"></i>
+              </div>
+              <div class="content">
+                  <ul>
+                      <li>Fundamental Design Concepts</li>
+                      <li>Spatial Organization</li>
+                      <li>Site Planning</li>
+                  </ul>
+              </div>
           </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UX design</h1>
-            <i class="fas fa-plus-circle"></i>
+          <div class="drowBox">
+              <div class="opener">
+                  <h1>Architectural History</h1>
+                  <i class="fas fa-plus-circle"></i>
+              </div>
+              <div class="content">
+                  <ul>
+                      <li>Evolution of Architectural Styles</li>
+                      <li>Influential Architects</li>
+                      <li>Historical Landmarks</li>
+                  </ul>
+              </div>
           </div>
-          <div class="content">
-            <ul>
-              <li>Human-Centered Design</li>
-              <li>
-                Why We Have Evolved From User-Centered Design to People, Human
-                and Humanity Centered Design?
-              </li>
-              <li>
-                How to Focus on People When You Solve Complex Global Challenges?
-              </li>
-              <li>The UX Design Process:</li>
-              <li>Discussion Exercise</li>
-              <li>Choose Theme</li>
-            </ul>
+          <div class="drowBox">
+              <div class="opener">
+                  <h1>Sustainable Architecture</h1>
+                  <i class="fas fa-plus-circle"></i>
+              </div>
+              <div class="content">
+                  <ul>
+                      <li>Green Building Practices</li>
+                      <li>Environmental Considerations</li>
+                      <li>Energy-Efficient Design</li>
+                  </ul>
+              </div>
           </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>Grides Wireframe</h1>
-            <i class="fas fa-plus-circle"></i>
+          <div class="drowBox">
+              <div class="opener">
+                  <h1>Architectural Drawing and Modeling</h1>
+                  <i class="fas fa-plus-circle"></i>
+              </div>
+              <div class="content">
+                  <ul>
+                      <li>Technical Drawing</li>
+                      <li>3D Modeling Tools</li>
+                      <li>Visualization Techniques</li>
+                  </ul>
+              </div>
           </div>
-          <div class="content">
-            <ul>
-              <li>Grid System</li>
-              <li>Wireframes</li>
-              <li>Discussion exercise</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>Figma introduction</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Figma introduction</li>
-              <li>Creating website in figma</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UX part review</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-              <li>LinkedIn</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Design</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>UI Patterns</li>
-              <li>Structure of a page</li>
-              <li>Organizing content</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Elements</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Typography</li>
-              <li>Text styles in Figma</li>
-              <li>Colors</li>
-              <li>Icons</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI part review</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-            </ul>
-          </div>
-        </div>
+          <!-- Add more sections as needed -->
       </div>
-    </div>
-
+  </div>
+  
     <footer>
       <div class="footer-logo">
         <img src="img/logo.png" alt="logo" />
