--- a/civil.html
+++ b/civil.html
@@ -66,127 +66,86 @@
       </a>
     </div>
     <div class="course-main-content">
-      <img src="img/civil.jpg" alt="ui/ux" />
+      <img src="img/civil.jpg" alt="Civil Engineering" />
       <div class="course-main-text">
-        <h1>Civil</h1>
-        <p></p>
-        <!-- <a href="register.html">Apply</a> -->
+        <h1>Civil Engineering</h1>
+        <p>
+          Delve into the field of civil engineering and master the principles
+          that govern the design and construction of infrastructure.
+        </p>
+        <!-- Uncomment the following line if you have a registration link -->
+        <a href="register.html">Apply</a>
       </div>
       <div class="dropdown-box">
         <h2>Course Program</h2>
         <div class="drowBox">
           <div class="opener">
-            <h1>What is UX and UI design?</h1>
+            <h1>Introduction to Civil Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>What is User Experience?</li>
-              <li>What is User Interface?</li>
-              <li>Why is UX Design so Important?</li>
-              <li>Usability - Part of UX</li>
+              <li>Overview of Civil Engineering</li>
+              <li>Historical Development</li>
+              <li>Scope and Importance</li>
+              <li>Key Disciplines</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>UX design</h1>
+            <h1>Structural Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Human-Centered Design</li>
-              <li>
-                Why We Have Evolved From User-Centered Design to People, Human
-                and Humanity Centered Design?
-              </li>
-              <li>
-                How to Focus on People When You Solve Complex Global Challenges?
-              </li>
-              <li>The UX Design Process:</li>
-              <li>Discussion Exercise</li>
-              <li>Choose Theme</li>
+              <li>Principles of Structural Engineering</li>
+              <li>Materials and Construction</li>
+              <li>Design of Structures</li>
+              <li>Analysis and Testing</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>Grides Wireframe</h1>
+            <h1>Geotechnical Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Grid System</li>
-              <li>Wireframes</li>
-              <li>Discussion exercise</li>
+              <li>Soil Mechanics</li>
+              <li>Foundation Engineering</li>
+              <li>Earthquake Engineering</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>Figma introduction</h1>
+            <h1>Transportation Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Figma introduction</li>
-              <li>Creating website in figma</li>
+              <li>Highway Design</li>
+              <li>Traffic Engineering</li>
+              <li>Urban Transportation</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>UX part review</h1>
+            <h1>Environmental Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-              <li>LinkedIn</li>
+              <li>Water and Wastewater Management</li>
+              <li>Air Pollution Control</li>
+              <li>Sustainable Practices</li>
             </ul>
           </div>
         </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Design</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>UI Patterns</li>
-              <li>Structure of a page</li>
-              <li>Organizing content</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Elements</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Typography</li>
-              <li>Text styles in Figma</li>
-              <li>Colors</li>
-              <li>Icons</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI part review</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-            </ul>
-          </div>
-        </div>
+        <!-- Add more sections as needed -->
       </div>
     </div>
 
