--- a/mech.html
+++ b/mech.html
@@ -66,127 +66,85 @@
       </a>
     </div>
     <div class="course-main-content">
-      <img src="img/mech.jpg" alt="ui/ux" />
+      <img src="img/mech.jpg" alt="Mechanical Engineering" />
       <div class="course-main-text">
-        <h1>Mechanical</h1>
-        <p></p>
+        <h1>Mechanical Engineering</h1>
+        <p>
+          Explore the world of mechanical engineering and master the principles
+          that drive innovation and design in the field.
+        </p>
+        <!-- Uncomment the following line if you have a registration link -->
         <!-- <a href="register.html">Apply</a> -->
       </div>
       <div class="dropdown-box">
         <h2>Course Program</h2>
         <div class="drowBox">
           <div class="opener">
-            <h1>What is UX and UI design?</h1>
+            <h1>Introduction to Mechanical Engineering</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>What is User Experience?</li>
-              <li>What is User Interface?</li>
-              <li>Why is UX Design so Important?</li>
-              <li>Usability - Part of UX</li>
+              <li>Overview of Mechanical Engineering</li>
+              <li>Historical Perspective</li>
+              <li>Importance in Modern Industry</li>
+              <li>Key Concepts and Applications</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>UX design</h1>
+            <h1>Thermodynamics and Heat Transfer</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Human-Centered Design</li>
-              <li>
-                Why We Have Evolved From User-Centered Design to People, Human
-                and Humanity Centered Design?
-              </li>
-              <li>
-                How to Focus on People When You Solve Complex Global Challenges?
-              </li>
-              <li>The UX Design Process:</li>
-              <li>Discussion Exercise</li>
-              <li>Choose Theme</li>
+              <li>Fundamentals of Thermodynamics</li>
+              <li>Heat Transfer Mechanisms</li>
+              <li>Applications in Engineering</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>Grides Wireframe</h1>
+            <h1>Mechanical Systems Design</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Grid System</li>
-              <li>Wireframes</li>
-              <li>Discussion exercise</li>
+              <li>Design Principles</li>
+              <li>Mechanical Components</li>
+              <li>Engineering Drawings</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>Figma introduction</h1>
+            <h1>Materials and Manufacturing Processes</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Figma introduction</li>
-              <li>Creating website in figma</li>
+              <li>Metallic and Non-metallic Materials</li>
+              <li>Processing Techniques</li>
+              <li>Quality Control</li>
             </ul>
           </div>
         </div>
         <div class="drowBox">
           <div class="opener">
-            <h1>UX part review</h1>
+            <h1>Robotics and Automation</h1>
             <i class="fas fa-plus-circle"></i>
           </div>
           <div class="content">
             <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-              <li>LinkedIn</li>
+              <li>Introduction to Robotics</li>
+              <li>Automated Systems</li>
+              <li>Applications in Industry</li>
             </ul>
           </div>
         </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Design</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>UI Patterns</li>
-              <li>Structure of a page</li>
-              <li>Organizing content</li>
-            </ul>
-          </div>
-        </div>
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI Elements</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Typography</li>
-              <li>Text styles in Figma</li>
-              <li>Colors</li>
-              <li>Icons</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="drowBox">
-          <div class="opener">
-            <h1>UI part review</h1>
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Projects Discussion</li>
-              <li>Q&A</li>
-            </ul>
-          </div>
-        </div>
+        <!-- Add more sections as needed -->
       </div>
     </div>
 
