virtual labs added

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 objectives...
               </p>
               <div class="card-action">
-                <a href="#" class="button">Read more</a>
+                <a href="virtualLabs.html" class="button">Read more</a>
               </div>
             </div>
           </div>
